--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.jpa.show_sql=true
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.profiles.include=aws
