--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     implementation 'org.projectlombok:lombok:1.18.28'
@@ -25,10 +26,6 @@ dependencies {
 
     testImplementation 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-//    testImplementation 'org.projectlombok:lombok:1.18.28'
-//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
-
 }
 
 tasks.named('test') {
