--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       hibernate:
         format_sql: true
         show-sql: true
+  session:
+    store-type: jdbc
 
 logging:
   level:
